# docs/swagger.yaml
@@ -34,6 +34,38 @@ definitions:
         description: 显示的标题
         type: string
     type: object
+  article_service.ArticleAddRequest:
+    properties:
+      abstract:
+        description: 文章简介
+        type: string
+      banner_id:
+        description: 文章封面id
+        type: integer
+      category:
+        description: 文章分类
+        type: string
+      content:
+        description: 文章内容
+        type: string
+      link:
+        description: 原文链接
+        type: string
+      source:
+        description: 文章来源
+        type: string
+      tags:
+        description: 文章标签
+        items:
+          type: string
+        type: array
+      title:
+        description: 文章标题
+        type: string
+    required:
+    - content
+    - title
+    type: object
   enum.ImageType:
     enum:
     - 1
@@ -363,26 +395,8 @@ paths:
       tags:
       - 广告管理
     get:
-      consumes:
-      - application/json
-      description: 分页查询广告列表，支持根据标题、链接等条件筛选
+      description: 分页查询文章列表，支持根据标题条件筛选
       parameters:
-      - description: 标题筛选（模糊匹配）
-        in: query
-        name: title
-        type: string
-      - description: 链接筛选（模糊匹配）
-        in: query
-        name: href
-        type: string
-      - description: 图片筛选（模糊匹配）
-        in: query
-        name: images
-        type: string
-      - description: 是否展示（true/false）
-        in: query
-        name: is_show
-        type: boolean
       - description: 页码，默认1
         in: query
         name: page
@@ -416,9 +430,9 @@ paths:
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/res.Response'
-      summary: 获取广告列表
+      summary: 获取文章列表
       tags:
-      - 广告管理
+      - 文章管理
     post:
       consumes:
       - application/json
@@ -496,6 +510,40 @@ paths:
       summary: 更新广告
       tags:
       - 广告管理
+  /api/articles:
+    post:
+      consumes:
+      - application/json
+      description: 创建一个新的文章，包含文章标题 文章内容等
+      parameters:
+      - description: 文章信息
+        in: body
+        name: data
+        schema:
+          $ref: '#/definitions/article_service.ArticleAddRequest'
+      - description: 文章发布成功
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 操作成功
+          schema:
+            $ref: '#/definitions/res.Response'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/res.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 添加文章
+      tags:
+      - 文章管理
   /api/email_login:
     post:
       consumes:
